--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "THe root path", root_path %>
+<%= link_to "The root path", root_path %>
 <ul class="nav">
 <% if user_signed_in? %>
 <li>
@@ -10,6 +10,12 @@
 </li>
 <% end %>
 <% if user_signed_in? %>
+<li>
+<%= link_to 'My groups', user_groups_path(current_user), method: 'get' %>
+</li>
+<li>
+<%= link_to 'New group', new_user_group_path(current_user) %>
+</li>
 <li>
 <%= link_to 'Edit account', edit_user_registration_path %>
 </li>
