--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@group, :url => user_groups_path(current_user), :method => 'post') do |f| %>
+<%= form_for @group, :url => { :action => 'create' } do |f| %>
 <div><%= f.label :name, "Name"  %><br />
 <%= f.text_field :name, :autofocus => true %></div>
 <div><%= f.submit "Create group" %></div>
